<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DireOverviewFragment"
    android:orientation="vertical"
    android:background="@color/blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/dire_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dire_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/dire_logo"
            android:gravity="center"
            android:text="DIRE"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hero"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/kda"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gpm"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xpm"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow android:background="@color/gray">

            <ImageView
                android:id="@+id/dire_avatar_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/dire_logo" />

            <TextView
                android:id="@+id/dire_player_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="player 1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_kda_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1/1/1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_gpm_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_xpm_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/dire_avatar_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/radiant_logo" />

            <TextView
                android:id="@+id/dire_player_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="player 1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_kda_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1/1/1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_gpm_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_xpm_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow android:background="@color/gray">

            <ImageView
                android:id="@+id/dire_avatar_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/radiant_logo" />

            <TextView
                android:id="@+id/dire_player_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="player 1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_kda_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1/1/1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_gpm_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_xpm_3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/dire_avatar_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/radiant_logo" />

            <TextView
                android:id="@+id/dire_player_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="player 1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_kda_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1/1/1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_gpm_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_xpm_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow android:background="@color/gray">

            <ImageView
                android:id="@+id/dire_avatar_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/radiant_logo" />

            <TextView
                android:id="@+id/dire_player_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="player 1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_kda_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1/1/1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_gpm_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dire_xpm_5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="111"
                android:textColor="@color/white" />

        </TableRow>

    </TableLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.cardview.widget.CardView>

</LinearLayout>