<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchOverviewFragment"
    android:orientation="vertical"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/radiant_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Radiant Victory"
                android:textColor="@color/white"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/match_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/match_id"
                    android:textColor="@color/light_blue"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/match_id_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/match_id"
                    android:text="2357228510"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/region"
                    android:textColor="@color/light_blue"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:id="@+id/region"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Vietnam"
                    android:textColor="@color/white"
                    android:layout_toRightOf="@+id/region"
                    android:id="@+id/region_name"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/skill"
                    android:textColor="@color/light_blue"
                    android:gravity="left"
                    android:id="@+id/skill"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Normal"
                    android:textColor="@color/white"
                    android:layout_toRightOf="@+id/skill"
                    android:id="@+id/skill_rate"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="12"
            android:textSize="100dp"
            android:textColor="@color/green"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="All Draft"
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:32:22"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="ENDED 3 DAYS AGO"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/end_day"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="12"
            android:textSize="100dp"
            android:textColor="@color/red"/>

    </LinearLayout>

</LinearLayout>